--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+	<div id="app"></div>
 	<script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
