--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>LWDesignsTheWeb</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
