styles added to home page

--- a/public/staticHome.html
+++ b/public/staticHome.html
@@ -2,19 +2,22 @@
 <html>
 <head>
 	<title>LW Designs the Web</title>
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<header></header>
 	<main>
-		<div>
-			<img src="./images/headShot.png">
-		</div>
-		<section>
+		<section class="top-photo">
+			<div class="image-container">
+				<img src="./images/headShot.png">
+			</div>
+			<div class="shadow"></div>
+		</section>
+		<section class="banner-background">
 			<h1>Lauren Watson</h1>
 			<h3>Web Developer & Designer</h3>
 		</section>
-		<nav>
+		<nav class="home-nav">
 			<ul>
 				<li>
 					<div>
