home page complete

--- a/public/staticHome.html
+++ b/public/staticHome.html
@@ -20,26 +20,26 @@
 		<nav class="home-nav">
 			<ul>
 				<li>
-					<div>
-						<img src="./images/puzzle.png">
+					<div class="circle">
+						<img src="./images/puzzle.png" id="puzzle">
 					</div>
 					<a href="./staticWork.html">Work</a>
 				</li>
 				<li>
-					<div>
-						<img src="./images/info.png">
+					<div class="circle">
+						<img src="./images/info.png" id="info">
 					</div>
 					<a href="./staticAbout.html">About</a>
 				</li>
 				<li>
-					<div>
-						<img src="./images/sheet2.png">
+					<div class="circle">
+						<img src="./images/sheet2.png" id="page">
 					</div>
 					<a href="./staticResume.html">Resume</a>
 				</li>
 				<li>
-					<div>
-						<img src="./images/envelope.png">
+					<div class="circle">
+						<img src="./images/envelope.png" id="envelope">
 					</div>
 					<a href="./staticContact.html">Contact</a>
 				</li>
