static code into react components

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 	<title>LWDesignsTheWeb</title>
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="../lib/normalize.css">
+	<link rel="stylesheet" type="text/css" href="../dist/main.css">
 </head>
 <body>
 	<div id="app"></div>
-	<script type="text/javascript" src="bundle.js"></script>
+	<script type="text/javascript" src="../dist/bundle.js"></script>
 </body>
 </html>
