--- a/public/staticWork.html
+++ b/public/staticWork.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>LW - Work</title>
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="/lib/normalize.css">
+	<link rel="stylesheet" type="text/css" href="/dist/main.css">
 </head> 
 
 <body>
@@ -25,74 +25,84 @@
 			</div>
 		</nav>
 	</header>
-	<main>
+	<main class="projects">
 		<section class="project-container" id="sortie">
 			<a href="" class="project-link">
-				<img class="project-image" src="./images/Sortie.png">
+				<!-- <img class="project-image" src="./images/Sortie.png"> -->
+				<div class="project-info">
+					<h4 class="title">Sortie</h4>
+					<div class="hidden">
+						<h4>Group Project</h4>
+						<p>A single page application that maps and shows detailed information of all U.S. Drone strikes from 2002 - present.
+						</p>
+						<h4>Skills</h4>
+						<p>HTML, CSS, Javascript, React, Experience Design</p>
+					</div>
+				</div>
 			</a>
-			<div class="project-info">
-				<a href="">
-					<h4>Sortie - Group</h4>
-				</a>
-				<p>A single page application that maps and shows detailed information of all U.S. Drone strikes from 2002 - present.
-				</p>
-				<h5>Skills I Used</h5>
-				<p>HTML, CSS, Javascript, React, Experience Design</p>
-			</div>
+			
 		</section>
 		<section class="project-container" id="star-wars">
-			<a href="" class="project-link">
-				<img class="project-image" src="./images/Starwars.png">
+			<a href="http://star-wars-app-lwdtw.herokuapp.com/" class="project-link">
+				<!-- <img class="project-image" src="./images/Starwars.png"> -->
+				<div class="project-info">
+					<h4 class="title">Star Wars App</h4>
+					<div class="hidden">
+						<h4>Individual Project</h4>					
+						<p>Scroll through the Star Wars Gallaxy and see what resides on each Planet. <br>** Currently working on better functionality.</p>
+						<h4>Skills</h4>
+						<p>HTML, CSS, Javascript, React</p>
+					</div>
+				</div>
 			</a>
-			<div class="project-info">
-				<a href="">
-					<h4>Star Wars App - Individual</h4>
-				</a>
-				<p>Scroll through the Star Wars Gallaxy and see what resides on each Planet. ** Currently working on better functionality.</p>
-				<h5>Skills I Used</h5>
-				<p>HTML, CSS, Javascript, React</p>
-			</div>
+			
 		</section>
 		<section class="project-container" id="marvel">
-			<a href="" class="project-link">
-				<img class="project-image" src="./images/Marvel.png">
+			<a href="http://marvel-app-lwdtw.herokuapp.com/" class="project-link">
+				<!-- <img class="project-image" src="./images/Marvel.png"> -->
+				<div class="project-info">
+					<h4 class="title">Marvel Battle <br>App</h4>
+					<div class="hidden">
+						<h4>Group Project</h4>
+						<p>Pick your battle! Select Marvel characters to go head to head in battle. <br>** Currently working on responsiveness</p>
+						<h4>Skills</h4>
+						<p>HTML, CSS, Sketch</p>
+					</div>
+				</div>
 			</a>
-			<div class="project-info">
-				<a href="">
-					<h4>Marvel Battle App - Group</h4>
-				</a>
-				<p>Pick your battle! Select Marvel characters to go head to head in battle. ** Currently working on responsiveness</p>
-				<h5>Skills I Used</h5>
-				<p>HTML, CSS, Sketch</p>
-			</div>
+			
 		</section>
 		<section class="project-container" id="weather">
 			<a href="" class="project-link">
-				<img class="project-image" src="./images/Weather.png">
+				<!-- <img class="project-image" src="./images/Weather.png"> -->
+				<div class="project-info">
+					<h4 class="title">Weather App</h4>
+					<div class="hidden">
+						<h4>Group Project</h4>
+						<p>View weather information in a pre-determined area.
+						</p>
+						<h4>Skills</h4>
+						<p>HTML, CSS, Photoshop</p>
+					</div>
+				</div>
 			</a>
-			<div class="project-info">
-				<a href="">
-					<h4>Weather App - Group</h4>
-				</a>
-				<p>View weather information in a pre-determined area.
-				</p>
-				<h5>Skills I Used</h5>
-				<p>HTML, CSS, Photoshop</p>
-			</div>
+			
 		</section>
 		<section class="project-container" id="todos">
-			<a href="" class="project-link">
-				<img class="project-image" src="./images/Todos.png">
+			<a href="https://lawatson0719.github.io/to-do-list/" class="project-link">
+				<!-- <img class="project-image" src="./images/Todos.png"> -->
+				<div class="project-info">
+					<h4 class="title">Todos</h4>
+					<div class="hidden">
+						<h4>Group Project</h4>
+						<p>A single page app that allows you to add items to a list, remove them, and mark complete or incomplete.
+						</p>
+						<h4>Skills</h4>
+						<p>HTML, CSS</p>
+					</div>
+				</div>
 			</a>
-			<div class="project-info">
-				<a href="">
-					<h4>Todos - Group</h4>
-				</a>
-				<p>A single page app that allows you to add items to a list, remove them, and mark complete or incomplete.
-				</p>
-				<h5>Skills I Used</h5>
-				<p>HTML, CSS</p>
-			</div>
+			
 		</section>
 	</main>
 	 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
