--- a/public/staticHome.html
+++ b/public/staticHome.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>LW Designs the Web</title>
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="/lib/normalize.css">
+	<link rel="stylesheet" type="text/css" href="/dist/main.css">
 </head>
 <body>
 	<main>
